--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^8.0",
-        "laravel/framework": "^10.10",
-        "illuminate/pagination": "^10.0"
+        "laravel/framework": "^10.10|^11.0",
+        "illuminate/pagination": "^10.0|^11.0"
     }
 }
