--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
         "php": "^8.0",
         "laravel/framework": "^10.10|^11.0",
         "illuminate/pagination": "^10.0|^11.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.4"
     }
 }
